moving back to java.util classes